--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,4 @@
-
-
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=560D9B024DD26EB6D211C3A09BAF2813
-CopyrightNotice=Copyright Fireteam Interactive
+ProjectID = 560D9B024DD26EB6D211C3A09BAF2813
+CopyrightNotice = Copyright Fireteam Interactive
 
