DOD-add: Create main character and enemy class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,3 +73,6 @@ ConnectionType = USBOnly
 bUseManualIPAddress = False
 ManualIPAddress =
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/DuskOfDespair.DotCharacterBase",NewName="/Script/DuskOfDespair.DodCharacterBase")
